microshift/templates/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: microshift
spec:
  ports:
  - port: 22
    protocol: TCP
    targetPort: 22
  type: NodePort
  selector:
    vm.kubevirt.io/name: microshift
---
apiVersion: v1
kind: Service
metadata:
  name: microshift-api
spec:
  ports:
  - port: 6443
    protocol: TCP
    targetPort: 6443
  selector:
    vm.kubevirt.io/name: microshift
