microshift/templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: "microshift"
spec:
  port:
    targetPort: "6443"
  to:
    kind: Service
    name: "microshift-api"
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
